--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-# temp files
 *~
-.swp
-
-# others
-
+.ansible-galaxy
+generated_inventory
+.ansible/
+.env/
+.idea/
 *.log
 .private
 .prv
+*.pyc
 .retry
-vagrant.retry
-.vagrant
+*.retry
+.swp
+.vagrant/
 .vault
-generated_inventory
+.venv
