--- a/files/site.yml
+++ b/files/site.yml
@@ -15,4 +15,4 @@
     - set_fact: fact_project_path="{{ lookup('pipe','pwd') }}"
     - debug: var=fact_project_path
 
-- include: ansible-role-oracle-express.yml
+- include: oracle_express_role.yml
