--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# roles/ansible-role-oracle-express/tasks/main.yml
+# roles/oracle_express_role/tasks/main.yml
 
 # START - boilerplate tasks
 
@@ -24,7 +24,7 @@
         - "{{ fact_role_path }}/defaults/{{ ansible_distribution | lower }}.yml"
       skip: true
 
-- name: "DEBUG - Debug ansible-role-oracle-express variable values"
+- name: "DEBUG - Debug oracle_express_role variable values"
   include: "{{ item }}"
   with_first_found:
     - files:
